Fix bug where transition wouldn't work on first collapse.

--- a/pydis_site/static/css/collapsibles.css
+++ b/pydis_site/static/css/collapsibles.css
@@ -6,7 +6,11 @@
 }
 
 .collapsible-content {
+  max-height: 40em;
+  transition: max-height 0.3s ease-out;
+}
+
+.collapsible-content.collapsed {
   overflow: hidden;
   max-height: 0;
-  transition: max-height 0.2s ease-out;
 }
